sfClaude/force-app/main/default/objects/Event_Registration__c/Event_Registration__c.object-meta.xml
<CustomObject>
    <label>Event Registration</label>
    <pluralLabel>Event Registrations</pluralLabel>
    <nameField>
        <label>Registration Number</label>
        <type>AutoNumber</type>
        <displayFormat>REG-{000000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <description>Records an individual attendee registration for a charity event. Links a Contact to an Event__c with their chosen ticket type, registration status, and special requirements. Auto-numbered for unique reference. Sharing is Controlled by Parent via Master-Detail to Event__c.</description>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>