sfClaude/force-app/main/default/objects/Event_Registration__c/fields/Consent_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_Contact__c</fullName>
    <label>Consent to Contact</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Records whether the attendee has given explicit consent to be contacted for future charity communications at the point of registration. Defaults to false in compliance with GDPR opt-in requirements. Must only be set to true based on a clear and affirmative action by the attendee.</description>
    <inlineHelpText>Tick only if the attendee has explicitly opted in to receive future communications from the charity. Leave unticked if consent was not given or is unclear.</inlineHelpText>
</CustomField>