sfClaude/force-app/main/default/objects/Event_Registration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Event Registrations</relationshipLabel>
    <relationshipName>Event_Registrations</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Contact record of the attendee being registered. Required on every registration. Delete constraint set to Restrict — a Contact cannot be deleted while they have active event registrations.</description>
    <inlineHelpText>Search and select the contact being registered for this event. The contact must exist in Salesforce before registering.</inlineHelpText>
</CustomField>