sfClaude/force-app/main/default/objects/Event_Registration__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>MasterDetail</type>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Registrations</relationshipLabel>
    <relationshipName>Registrations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <description>Master-Detail relationship to the parent Event__c record. Cascade delete removes all registrations when an event is deleted. Drives roll-up summary fields Registered_Count__c and Actual_Attendees__c on Event__c (created in DEV-13).</description>
    <inlineHelpText>The event this registration belongs to. Set automatically and cannot be changed after creation.</inlineHelpText>
</CustomField>