sfClaude/force-app/main/default/objects/Event_Registration__c/fields/Registration_Date__c.field-meta.xml
<CustomField>
    <fullName>Registration_Date__c</fullName>
    <label>Registration Date</label>
    <type>Date</type>
    <description>The date the registration was created. Populated automatically by a Before Save Flow in Epic 4 using TODAY() at the point of record creation. Should not be set manually.</description>
    <inlineHelpText>The date this registration was submitted. Set automatically — do not edit manually.</inlineHelpText>
</CustomField>