sfClaude/force-app/main/default/objects/Event_Registration__c/fields/Registration_Source__c.field-meta.xml
<CustomField>
    <fullName>Registration_Source__c</fullName>
    <label>Registration Source</label>
    <type>Picklist</type>
    <required>true</required>
    <description>Records the channel through which this registration was submitted. Used for channel attribution reporting and to support GDPR consent tracking by source. Defaults to Internal for registrations created directly in Salesforce.</description>
    <inlineHelpText>Select how this registration was received. Internal = entered by staff; Website = self-service online; Phone = taken over the phone; Email = submitted via email; Partner = through a third-party organisation.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>