sfClaude/force-app/main/default/objects/Event_Registration__c/fields/Registration_Status__c.field-meta.xml
<CustomField>
    <fullName>Registration_Status__c</fullName>
    <label>Registration Status</label>
    <type>Picklist</type>
    <required>true</required>
    <description>The current status of this registration in the attendee lifecycle. Drives roll-up summaries on Event__c (Registered_Count__c counts non-Cancelled; Actual_Attendees__c counts Attended only). History tracked for audit and reporting.</description>
    <inlineHelpText>Select the current registration status. Registered = confirmed booking; Waitlisted = pending availability; Cancelled = booking withdrawn; Attended = checked in on the day; No Show = did not attend without cancelling.</inlineHelpText>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Registered</fullName>
                <default>true</default>
                <label>Registered</label>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Attended</fullName>
            </value>
            <value>
                <fullName>No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>