sfClaude/force-app/main/default/objects/Event_Registration__c/fields/Special_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Special_Requirements__c</fullName>
    <label>Special Requirements</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Free-text field to capture any special requirements for the attendee, such as dietary needs, accessibility requirements, or other accommodations. Reviewed by event organisers during logistics planning.</description>
    <inlineHelpText>Enter any special requirements for this attendee, e.g. dietary needs, wheelchair access, or other accommodations needed on the day.</inlineHelpText>
</CustomField>