sfClaude/force-app/main/default/objects/Event_Registration__c/fields/Ticket_Price__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Price__c</fullName>
    <label>Ticket Price</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <description>The price charged for this registration, copied from Event_Ticket_Type__c.Price__c at the point of registration by a Before Save Flow in Epic 4. Stored separately to preserve the historical price even if the ticket type price is later changed. History tracked.</description>
    <inlineHelpText>The ticket price for this registration. Set automatically from the selected ticket type — do not edit manually.</inlineHelpText>
</CustomField>