sfClaude/force-app/main/default/objects/Event_Registration__c/validationRules/Volunteer_Coordinator_Ticket_Type_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Volunteer_Coordinator_Ticket_Type_Restriction</fullName>
    <active>true</active>
    <description>Prevents Charity Events Standard User profile users from editing non-Volunteer registrations. Enforces the Volunteer Coordinator restriction. Uses profile name as persona proxy; replace with Custom Permission if a dedicated profile is introduced.</description>
    <errorConditionFormula>$Profile.Name = "Charity Events Standard User" &amp;&amp;
NOT(ISPICKVAL(Ticket_Type_Record__r.Ticket_Type__c, "Volunteer")) &amp;&amp;
NOT(ISNEW())</errorConditionFormula>
    <errorDisplayField>Ticket_Type_Record__c</errorDisplayField>
    <errorMessage>Volunteer Coordinators may only edit Volunteer ticket registrations.</errorMessage>
</ValidationRule>